# qualcomm

./: .gitmodules  README.md  common.py  deeplabv3_reference_output_float16  deeplabv3_reference_output_float32  evaluate.py  evaluate_dyn_models.py  launch_rpc.sh  requirements-python3.6.9.txt
apps/OpenCLCppRunner/: .gitignore  CMakeLists.txt  main.cpp
apps/OpenCLCppRunner/common/: common_functions.cpp  common_functions.h
apps/OpenCLCppRunner/implementations/: conv2d_vgg16.cpp  conv2d_vgg16.h  simple_mad.cpp  simple_mad.h  tvm_mace_mobilenetv1_avg_pooling.cpp  tvm_mace_mobilenetv1_avg_pooling.h  tvm_resnet50v2_conv_kernel.cpp  tvm_resnet50v2_conv_kernel.h  vector_add.cpp  vector_add.h
apps/OpenCLCppRunner/kernels/: conv2d_vgg16.cl  conv2d_vgg16_array.cl  simple_mad.cl  tvm_dense_textures_rfactor.cl  tvm_mace_mobilenetv1_avg_pooling.cl  tvm_resnet50v2_conv_kernel_with_intrinsics.cl  tvm_resnet50v2_conv_kernel_wo_intrinsics.cl  vector_add.cl
apps/OpenCLRunner/: settings.gradle
apps/OpenCLRunner/app/: build.gradle
apps/OpenCLRunner/app/src/main/cpp/: CMakeLists.txt  openclrunner.cpp
apps/OpenCLRunner/app/src/main/cpp/common/: common_functions.cpp  common_functions.h
apps/OpenCLRunner/app/src/main/cpp/implementations/: mace_inceptionv3_kernel.cpp  mace_inceptionv3_kernel.h  simple_mad.cpp  simple_mad.h  tvm_resnet50v2_conv_kernel.cpp  tvm_resnet50v2_conv_kernel.h  vector_add.cpp  vector_add.h
apps/OpenCLRunner/gradle/wrapper/: gradle-wrapper.properties
include/tvm/ir/: type.h
include/tvm/runtime/: c_backend_api.h  device_api.h
include/tvm/tir/: builtin.h  op.h
layers_from_onnx/: run_faster.py  run_ssd.py  run_yolov3.py  tune_eval_vm.py
logs/: 3x3_3.log.tmp
logs_8gen2/: mace_deeplabv3.texture.float16_acc32.autotvm.log.tmp  onnx_faster_rcnn.texture.float32.autotvm.log.tmp  onnx_ssd_resnet34.texture.float32.autotvm.log.tmp  onnx_yolo_v3.texture.float16_acc32.autotvm.log.tmp
models/: inception-v3_1548916615.pb
python/tvm/driver/: build_module.py
python/tvm/tir/transform/: transform.py
python/tvm/topi/: __init__.py
scripts/: android_watchdog.sh  evaluate.py  launch_rpc.sh  minimal.py  test_intermediate_texture.py  texture.py
src/printer/: text_printer.h  tvmscript_printer.cc
src/relay/backend/: graph_plan_memory.cc
src/relay/transforms/: annotate_texture_storage.cc  simplify_expr.cc  type_infer.cc
src/runtime/: c_runtime_api.cc  library_module.cc  thread_storage_scope.h
src/runtime/graph/: graph_runtime.h
src/runtime/metal/: metal_module.mm
src/runtime/opencl/: opencl_common.h  opencl_device_api.cc  opencl_module.cc  texture_pool.cc
src/tir/ir/: buffer.cc
src/tir/op/: builtin.cc  op.cc
src/tir/transforms/: lower_tvm_builtin.cc  vectorize_loop.cc
tests/python/contrib/: test_adreno.py
tests/python/contrib/models/: requirements.txt
tests/python/relay/: test_pass_simplify_expr.py
tflite_measurer/: README.md  download_models.py  run_benchmark.sh
tvm/: CMakeLists.txt
tvm/apps/cpp_rpc/: CMakeLists.txt  rpc_tracker_client.h
tvm/golang/src/: tvm_runtime_pack.cc
tvm/include/tvm/ir/: type.h
tvm/include/tvm/runtime/: c_backend_api.h
tvm/include/tvm/tir/: builtin.h
tvm/python/tvm/: testing.py
tvm/python/tvm/driver/: build_module.py
tvm/python/tvm/te/: tensor.py
tvm/src/ir/: type.cc  type_functor.cc
tvm/src/printer/: tir_text_printer.cc
tvm/src/runtime/: c_runtime_api.cc  texture.h  thread_storage_scope.h
(+45 files in other folders)
